gccida/g2/binary_op_error
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_op_error/src/c-common.c:2041:24: error: must use 'enum' tag to refer to type 'tree_code'
void  binary_op_error( tree_code code) 
                       ^
                       enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_op_error/src/c-common.c:2065:6: error: use of undeclared identifier 'off_671DF2'
v1 = off_671DF2; 
     ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/binary_op_error/src/obj/c-common.o] Error 1
